# FST-GUI

./: CMakeLists.txt  FST-GUI.sln  README.md
CUDAQuery/: CMakeLists.txt  CUDAQuery.cpp  CUDAQuery.hpp  CUDAQuery.vcxproj  CUDAQuery.vcxproj.filters
Common/: Common.vcxitems  Common.vcxitems.filters  DeviceInfo.hpp
FST-GUI/: BlockQueue.cpp  CMakeLists.txt  FST-GUI.cpp  FST-GUI.hpp  FST-GUI.rc  FST-GUI.vcxproj  FST-GUI.vcxproj.filters  FSTLogo.xpm  GPUFrame.cpp  GPUFrame.hpp  Logging.cpp  Logging.hpp  MainFrame.cpp  MainFrame.hpp  RunThread.cpp  RunThread.hpp  Validator.hpp  resource.h  subprocess.h  utils.cpp  utils.hpp
SYCLQuery/: CMakeLists.txt  SYCLQuery.cpp  SYCLQuery.hpp  SYCLQuery.vcxproj  SYCLQuery.vcxproj.filters
